# speech2text

./: .gitignore  AGENTS.md  Makefile  README.md  pyproject.toml
instructions/: dependency-management.md  work-directory.md
src/speech2text/: cli.py  converter.py  transcriber.py
tests/: test_cli.py  test_converter.py  test_transcriber.py
