[project]
name = "speech2text"
version = "0.1.0"
description = "CLI tool to transcribe audio/video files to text using OpenAI Speech-to-Text API"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=2.17.0",
]

[project.scripts]
speech2text = "speech2text.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
